--- a/index.html
+++ b/index.html
@@ -8,19 +8,29 @@
         rel="stylesheet">
   <link rel="stylesheet"
         href="./style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-selection/1.2.0/d3-selection.js"></script>
-  <script src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.js"></script>
+  <script type="text/javascript"
+          src="https://cdnjs.cloudflare.com/ajax/libs/d3-selection/1.2.0/d3-selection.js"></script>
+  <script type="text/javascript"
+          src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>
+  <script type="text/javascript"
+          src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
 </head>
 
 <body>
-  <div class="title">Sooyeonjang Vis</div>
-  <div class="sub_title">Note Squence with Arc Diagram</div>
-  <svg id="vis_arc"></svg>
+  <!-- <div class="title">Sooyeonjang Vis</div> -->
+  <!-- <div class="sub_title">Note Squence with Arc Diagram</div> -->
+  <svg id="vis_squence"></svg>
+  <div id="vis_network"></div>
+
 </body>
-<script src="./data.js"></script>
-<script src="./vis.arc.js"></script>
-<script src="./index.js"></script>
+<script src="./scripts/data.js"></script>
+<script src="./scripts/vis.squence.js"></script>
+<script src="./scripts/vis.network.js"></script>
+
+<script src="./scripts/index.js"></script>
 
 </html>
